
- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.


Settings
--------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.

- Using `Status->Signals->All Signals', you can modify signal handling 
  for all signals at once.

- Signal settings are saved with the current session.

- Opening a session restores button definitions, display shortcuts,
  and tab width.  This way, you can manage different configurations
  for different projects.

- DBX breakpoints are saved referring to the function name, if possible.
  This is useful when working with derived sources.


Bug fixes
---------

- This release brings major performance improvements, especially when
  processing large chunks of data.  In fact, the time complexity of
  data processing algorithms has been improved from O(n^2) to O(n).

- On DBX (except Sun DBX), the `Run' button is now bound to the
  `rerun' command, re-using program arguments.

- Value tips for large arrays no longer cause significant delays.

- Improved redirection handling.  You can redirect stderr away from
  the execution window, using `run 2> FILE'.  The debugger command
  `run 2> /dev/tty' will redirect stderr to the debugger console.

- Sun DBX warnings like `warning: -r option only recognized for C++'
  are properly suppressed.

- Significant memory leaks in the data window have been plugged.

- DDD handles unbuffered echoing TTY modes as set by some DBX flavours.

- Promptless input from the debugger console is handled correctly.

- The `Disp *' button dereferences pointers as it should.
